# fmbot-auto-pixel-jumble

./: .env.example  .gitignore  README.md  args.py  inference.py  lastfm.py  main.py  pyproject.toml  train.py
src/bot/: client.py
src/core/: engine.py  processor.py  trainer.py
src/services/: lastfm.py
